--- a/package.json
+++ b/package.json
@@ -1,16 +1,27 @@
 {
-  "name": "Skeletonic",
+  "name": "skeletonic",
   "version": "1.0.0",
   "description": "A dead on, lightweight, responsive and modern CSS framework.",
   "keywords": [
     "skeletonic",
-    "css",
+    "skeletonic.css",
+    "CSS",
     "lightweight",
+    "dead on",
     "responsive",
-    "framework"
+    "framework",
+    "semantic",
+    "mobile-first",
+    "modern",
+    "style-agnostic",
+    "front-end",
+    "frontend",
+    "grid system",
+    "typography"
   ],
+  "style": "dist/skeletonic.min.css",
+  "main": "dist/skeletonic.min.css",
   "filename": "skeletonic.min.css",
-  "main": "./dist/skeletonic.min.css",
   "scripts": {
     "test": "",
     "build": "gulp"
@@ -21,12 +32,6 @@
   },
   "author": "Reedia Limited <hello@reedia.com> (https://github.com/reedia)",
   "license": "MIT",
-  "keywords": [
-    "skeletonic",
-    "yeoman-generator",
-    "skeletonic",
-    "gulp"
-  ],
   "bugs": {
     "url": "https://github.com/reedia/skeletonic/issues"
   },
@@ -36,21 +41,23 @@
     "target": "git://github.com/reedia/skeletonic.git",
     "basePath": "dist",
     "files": [
-      "skeletonic.min.css",
-      "skeletonic.css"
+      "dist/skeletonic.min.css",
+      "dist/skeletonic.css",
+      "dist/skeletonic-pattern.min.css",
+      "dist/skeletonic-pattern.css"
     ]
   },
   "devDependencies": {
     "gulp": "^3.9.1",
-    "gulp-csscomb": "^3.0.8",
-    "gulp-clean-css": "^3.9.0",
-    "gulp-cli": "^1.4.0",
+    "gulp-clean-css": "^3.9.2",
+    "gulp-cli": "^2.0.0",
     "gulp-concat": "^2.6.1",
-    "gulp-git": "^2.4.2",
-    "gulp-header": "^1.8.9",
-    "gulp-size": "^2.1.0",
+    "gulp-csscomb": "^3.0.8",
     "gulp-csslint": "^1.0.0",
-    "gulp-stylus": "^2.6.0"
+    "gulp-git": "^2.5.0",
+    "gulp-header": "^1.8.9",
+    "gulp-size": "^3.0.0",
+    "gulp-stylus": "^2.7.0"
   },
   "dependencies": {}
 }
