--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,10 @@ cache:
   directories:
   - node_modules
 node_js:
-- 6
+- 'node'
 before_script:
-- npm install -g gulp
+  - node --version
+  - npm install -g gulp-cli
 script: gulp
 notifications:
   email: false
@@ -46,7 +47,7 @@ deploy:
     on:
       # all_branches: true
       # tags: true
-      repo: reedia/skeletonic
+      repo: sebastienrousseau/skeletonic
   # - provider: npm
   #   email: $NPM_EMAIL
   #   api_key: $NPM_TOKEN
